# image_size

./: pyproject.toml  setup.py
image_sizes/: get_image_sizes.py
image_sizes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
