[tool.poetry]
name = "image_size"
version = "1.1.0"
description = "Creates Python dictionary of image dimensions."
authors = ["Charles C. Forgy <ccforgy@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.55.0"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
